Improve data retrieval using projection and conditional field inclusion